Fix rss widget line wrapping

--- a/uw-frame-components/css/buckyless/widget.less
+++ b/uw-frame-components/css/buckyless/widget.less
@@ -218,6 +218,7 @@
           div.headline {
             width: 80%;
             font-size: 12px;
+            white-space: nowrap;
           }
 
           div.headline.nodate {
@@ -469,6 +470,10 @@
 
     a.full-width {
       display: block;
+
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
 
